--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <img src="./assets/pictures/logo-removebg-preview.png" alt="Logo">
         </div>
         <ul class="nav-links">
-          <li><a href="#">Accueil</a></li>
+          <li class="active"><a href="#">Accueil</a></li>
           <li><a href="#">À propos</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">Contact</a></li>
