section partie une faite

--- a/index.html
+++ b/index.html
@@ -38,8 +38,25 @@
 
     <section>
         <div class="partie1">
-            <h1>les voiture de prestiges</h1>
+            <h1>les voitures de prestiges</h1>
             <hr>
+        </div>
+
+        <div class="parti2">
+            <div class="voiture">
+                <img src="./assets/pictures/un.png" alt="voiture" srcset="">
+                <h2>voiture de prestige</h2>
+            </div>
+
+            <div class="voiture">
+                <img src="./assets/pictures/deux.png" alt="voiture" srcset="">
+                <h2>voiture de prestige</h2>
+            </div>
+
+            <div class="voiture">
+                <img src="./assets/pictures/trois.png" alt="voiture" srcset="">
+                <h2>voiture de prestige</h2>
+            </div>
         </div>
     </section>
     
