--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>                      
         </div>
 
-      </header>
+    </header>
       
 
     <!-- FIN HEADER  -->
@@ -75,12 +75,33 @@
 
         <div class="game_toyota">
             <div>
-                <h1>Notre game toyota </h1>
+                <h1>Notre gamme toyota </h1>
                 <hr>
             </div>
-        </div>
-        
 
+            <div class="list_voitures">
+                <div class="list_voitures_items" >
+                    <h3>Toyota Yaris Hybride</h3>
+                    <img src="./assets/pictures/deux.png" alt="yaris" srcset="">
+                    <h4>Toyota Yaris Hybride Entretien</h4>
+                    <h4>À partir de 22 950 € au lieu de 23 950 € </h4>
+                </div>
+                <div class="list_voitures_items" >
+                    <h3>Toyota Aygo X</h3>
+                    <img src="./assets/pictures/un.png" alt="corona" srcset="">
+                    <h4>Entretien & Sous condition de reprise</h4>
+                    <h4>À partir de 16 190€ au lieu de 18 190€ </h4>
+                </div>
+                <div class="list_voitures_items" >
+                    <h3>Nouvelle Corolla Hybride</h3>
+                    <img src="./assets/pictures/trois.png" alt="" srcset="">
+                    <h4>Entretien inclus & sans condition</h4>
+                    <h4>À partir de 30 400 € au lieu de 32 400 €
+                    </h4>
+                </div>
+
+            </div>
+        </div>
     </section>
 
     <!-- FIN CORPS --> 
