--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    
-
     <link rel="stylesheet" href="./assets/css/auto.css">
     <link rel="shortcut icon" href="./assets/pictures/LogoMakr-6iJiULblanc.png" type="image/x-icon">
     <title>accueil</title>
@@ -20,7 +18,7 @@
           </div>
           <ul>
             <li ><a href="#" class="active">Accueil</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="#">Catalogues</a></li>
             <li><a href="#">À propos</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
@@ -84,23 +82,34 @@
                     <h3>Toyota Yaris Hybride</h3>
                     <img src="./assets/pictures/deux.png" alt="yaris" srcset="">
                     <h4>Toyota Yaris Hybride Entretien</h4>
-                    <h4>À partir de 22 950 € au lieu de 23 950 € </h4>
+                    <h5>À partir de 22 950 € au lieu de 23 950 € </h5>
+                    <a href="#" target="_blank" rel="noopener noreferrer">Acheter</a>
                 </div>
+
                 <div class="list_voitures_items" >
                     <h3>Toyota Aygo X</h3>
                     <img src="./assets/pictures/un.png" alt="corona" srcset="">
                     <h4>Entretien & Sous condition de reprise</h4>
-                    <h4>À partir de 16 190€ au lieu de 18 190€ </h4>
+                    <h5>À partir de 16 190€ au lieu de 18 190€ </h5>
+                    <a href="#" target="_blank" rel="noopener noreferrer">Acheter  </a>
                 </div>
                 <div class="list_voitures_items" >
                     <h3>Nouvelle Corolla Hybride</h3>
                     <img src="./assets/pictures/trois.png" alt="" srcset="">
                     <h4>Entretien inclus & sans condition</h4>
-                    <h4>À partir de 30 400 € au lieu de 32 400 €
-                    </h4>
+                    <h5>À partir de 30 400 € au lieu de 32 400 €
+                    </h5>
+                    <a href="#" target="_blank" rel="noopener noreferrer">Acheter</a>
                 </div>
-
             </div>
+
+            <div class="catalogues">
+                <a href="./pages/catalogues.html">voir le catalogues </a>
+            </div>
+        </div>
+
+        <div class="nous">
+            
         </div>
     </section>
 
