--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
         </div>
     </section>
 
+    <footer>
+        <p>Copyright © 2023 - html css - frid eliandre Banzouzi / projet de classe IESIG BACHELOR WEB </p>
+    </footer>
+
     <!-- FIN CORPS --> 
      
 </body>
