--- a/pages/vente.html
+++ b/pages/vente.html
@@ -5,6 +5,8 @@
 	<title>Paiement pour l'achat d'une voiture</title>
     <link rel="stylesheet" href="../assets/css/auto.css">
     <link rel="stylesheet" href="../assets/css/vente.css">
+
+    <link rel="shortcut icon" href="../assets/pictures/LogoMakr-6iJiULblanc.png" type="image/x-icon">
 	
 </head>
 <body>
