--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <ul>
             <li ><a href="#" class="active">Accueil</a></li>
             <li><a href="./pages/catalogues.html">Catalogues</a></li>
-            <li><a href="#">À propos</a></li>
+            <li><a href="./pages/apropos.html">À propos</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
@@ -84,7 +84,7 @@
                     <img src="../assets/pictures/deux.png" alt="yaris" srcset="">
                     <h4>Toyota Yaris Hybride Entretien</h4>
                     <h5>À partir de 22 950 € au lieu de 23 950 € </h5>
-                    <a href="#" target="_blank" rel="noopener noreferrer">Acheter</a>
+                    <a href="./pages/vente.html" rel="noopener noreferrer">Acheter</a>
                 </div>
 
                 <div class="list_voitures_items" >
@@ -92,7 +92,7 @@
                     <img src="../assets/pictures/un.png" alt="corona" srcset="">
                     <h4>Entretien & Sous condition de reprise</h4>
                     <h5>À partir de 16 190€ au lieu de 18 190€ </h5>
-                    <a href="#" target="_blank" rel="noopener noreferrer">Acheter  </a>
+                    <a href="./pages/vente.html" rel="noopener noreferrer">Acheter  </a>
                 </div>
                 <div class="list_voitures_items" >
                     <h3>Nouvelle Corolla Hybride</h3>
@@ -100,7 +100,7 @@
                     <h4>Entretien inclus & sans condition</h4>
                     <h5>À partir de 30 400 € au lieu de 32 400 €
                     </h5>
-                    <a href="#" target="_blank" rel="noopener noreferrer">Acheter</a>
+                    <a href="./pages/vente.html" rel="noopener noreferrer">Acheter</a>
                 </div>
             </div>
 
