--- a/pages/apropos.html
+++ b/pages/apropos.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>apropos</title>
 
-    <link rel="stylesheet" href="./assets/css/auto.css">
-    <link rel="shortcut icon" href="./assets/pictures/LogoMakr-6iJiULblanc.png" type="image/x-icon">
+    <link rel="stylesheet" href="../assets/css/auto.css">
+    <link rel="shortcut icon" href="../assets/pictures/LogoMakr-6iJiULblanc.png" type="image/x-icon">
     
 </head>
 <body>
     <header>
         <nav>
           <div class="logo">
-            <a href="#"><img src="./assets/pictures/LogoMakr-6iJiUL.png" alt="Logo"></a>
+            <a href="#"><img src="../assets/pictures/LogoMakr-6iJiUL.png" alt="Logo"></a>
           </div>
           <ul>
             <li ><a href="../index.html" >Accueil</a></li>
             <li><a href="./pages/catalogues.html">Catalogues</a></li>
             <li><a href="#" class="active">À propos</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </nav>
 
