--- a/pages/catalogues.html
+++ b/pages/catalogues.html
@@ -20,14 +20,14 @@
           <ul>
             <li ><a href="../index.html">Accueil</a></li>
             <li><a href="#"  class="active">Catalogues</a></li>
-            <li><a href="#">À propos</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./apropos.html">À propos</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </nav>
 
         <div class="banner">
             <img src="../assets/pictures/trois.png" alt="" sizes="" srcset="">
-            <img src="../assets/pictures/un.png" alt="" sizes="" srcset="">         
+            <!-- <img src="../assets/pictures/un.png" alt="" sizes="" srcset="">          -->
         </div>
 
     </header>
