--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li ><a href="#" class="active">Accueil</a></li>
             <li><a href="./pages/catalogues.html">Catalogues</a></li>
             <li><a href="./pages/apropos.html">À propos</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./pages/contact.html">Contact</a></li>
           </ul>
         </nav>
 
@@ -81,7 +81,7 @@
             <div class="list_voitures">
                 <div class="list_voitures_items" >
                     <h3>Toyota Yaris Hybride</h3>
-                    <img src="../assets/pictures/deux.png" alt="yaris" srcset="">
+                    <img src="./assets/pictures/deux.png" alt="yaris" srcset="">
                     <h4>Toyota Yaris Hybride Entretien</h4>
                     <h5>À partir de 22 950 € au lieu de 23 950 € </h5>
                     <a href="./pages/vente.html" rel="noopener noreferrer">Acheter</a>
@@ -89,14 +89,14 @@
 
                 <div class="list_voitures_items" >
                     <h3>Toyota Aygo X</h3>
-                    <img src="../assets/pictures/un.png" alt="corona" srcset="">
+                    <img src="./assets/pictures/un.png" alt="corona" srcset="">
                     <h4>Entretien & Sous condition de reprise</h4>
                     <h5>À partir de 16 190€ au lieu de 18 190€ </h5>
                     <a href="./pages/vente.html" rel="noopener noreferrer">Acheter  </a>
                 </div>
                 <div class="list_voitures_items" >
                     <h3>Nouvelle Corolla Hybride</h3>
-                    <img src="../assets/pictures/trois.png" alt="" srcset="">
+                    <img src="./assets/pictures/trois.png" alt="" srcset="">
                     <h4>Entretien inclus & sans condition</h4>
                     <h5>À partir de 30 400 € au lieu de 32 400 €
                     </h5>
