--- a/pages/apropos.html
+++ b/pages/apropos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>apropos</title>
+    <title>à propos</title>
 
     <link rel="stylesheet" href="../assets/css/auto.css">
     <link rel="shortcut icon" href="../assets/pictures/LogoMakr-6iJiULblanc.png" type="image/x-icon">
@@ -18,7 +18,7 @@
           </div>
           <ul>
             <li ><a href="../index.html" >Accueil</a></li>
-            <li><a href="./pages/catalogues.html">Catalogues</a></li>
+            <li><a href="./catalogues.html">Catalogues</a></li>
             <li><a href="#" class="active">À propos</a></li>
             <li><a href="./contact.html">Contact</a></li>
           </ul>
@@ -38,5 +38,8 @@
         </div>
 
     </header>
+    <footer>
+        <p>Copyright © 2023 - html css - frid eliandre Banzouzi / projet de classe IESIG BACHELOR WEB </p>
+    </footer>
 </body>
 </html>
