--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="./assets/css/auto.css">
     <link rel="shortcut icon" href="./assets/pictures/LogoMakr-6iJiULblanc.png" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <title>accueil</title>
  
 </head>
